--- a/.classpath
+++ b/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="OCSF/" kind="src" path="src"/>
+	<classpathentry excluding="OCSF/|gui/|gui/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/OCSF"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
