--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="OCSF/|gui/|gui/" kind="src" path="src"/>
+	<classpathentry excluding="OCSF/|gui/|gui/|vvv/|mygui/" kind="src" path="src"/>
 	<classpathentry kind="src" path="src/OCSF"/>
+	<classpathentry kind="src" path="src/gui"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="module" value="true"/>
