--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,5 +1,17 @@
-/clients/
-/controllers/
-/entity/
-/server/
 /order/
+/common/
+/controllers/
+/cart.jpg
+/clients/
+/server/
+/entity/
+/Carlsberg.jpg
+/cola.jpg
+/fries.jpg
+/hamburger.jpg
+/pizaa.jpg
+/img/
+/delivery.jpg
+/takeaway.png
+/general/
+/report/
