--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,17 +1,12 @@
-/order/
+/clients/
 /common/
 /controllers/
-/cart.jpg
-/clients/
-/server/
 /entity/
-/Carlsberg.jpg
-/cola.jpg
-/fries.jpg
-/hamburger.jpg
-/pizaa.jpg
-/img/
-/delivery.jpg
-/takeaway.png
+/ocsf/
+/server/
+/utility/
+/cart.jpg
 /general/
+/img/
+/order/
 /report/
