update insert to data table

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,11 @@
 /clients/
-/entity/
-/server/
-/controllers/
 /common/
-/general/
+/controllers/
+/entity/
+/ocsf/
+/report/
+/server/
+/takeaway.png
+/utility/
+/img/
+/order/
