--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,18 @@
+/branch_manager/
+/cart.jpg
+/clients/
+/common/
+/customer/
+/delivery.jpg
+/entity/
+/general/
+/hr/
+/img/
 /managment/
+/ocsf/
+/order/
+/report/
+/resturant/
+/server/
+/takeaway.png
+/utility/
