--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,14 @@
-/hr/
-/menu/
 /clients/
 /common/
 /entity/
-/general/
 /managment/
 /ocsf/
 /order/
 /report/
+/resturant/
 /server/
 /utility/
+/general/
+/menu/
+/img/
 /branch_manager/
