--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,15 +1,13 @@
 /clients/
 /common/
 /entity/
+/general/
 /managment/
+/menu/
 /ocsf/
 /order/
 /report/
-/resturant/
 /server/
 /utility/
-/general/
-/menu/
-/img/
-/branch_manager/
-/hr/
+/QuartelyReports/
+/quartelyreports/
