--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,10 +1,13 @@
-/quartelyreports/
-/menu/
-/order/
-/report/
-/common/
 /clients/
-/server/
+/common/
 /entity/
 /general/
-/dishPics/
+/managment/
+/menu/
+/ocsf/
+/order/
+/quartelyreports/
+/report/
+/resturant/
+/server/
+/utility/
