--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,16 +1,19 @@
+/branch_manager/
 /clients/
 /common/
+/customer/
+/dishPics/
 /entity/
 /general/
+/hr/
+/img/
 /managment/
 /menu/
 /ocsf/
 /order/
+/progTest.fxml
+/quartelyreports/
 /report/
+/resturant/
 /server/
 /utility/
-/img/
-/progTest.fxml
-/hr/
-/dishPics/
-/resturant/
