--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,7 @@
-/clients/
+/order/
+/dishPics/
 /common/
-/entity/
+/branch_manager/
 /general/
 /managment/
-/menu/
-/ocsf/
-/order/
-/report/
-/server/
-/utility/
 /img/
