Fix - not getting restaurant without dishes

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,15 @@
+/clients/
+/common/
+/entity/
+/img/
+/managment/
 /menu/
+/ocsf/
+/order/
+/quartelyreports/
+/report/
+/resturant/
+/server/
+/utility/
+/general/
+/dishPics/
