--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,12 +1,5 @@
-/clients/
-/common/
-/entity/
 /general/
-/managment/
-/menu/
-/ocsf/
-/order/
-/report/
-/server/
-/utility/
+/common/
 /dishPics/
+/img/
+/managment/
