--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,12 @@
+/clients/
 /common/
-/dishPics/
-/general/
-/img/
+/entity/
 /managment/
+/ocsf/
+/report/
+/resturant/
+/server/
+/utility/
+/general/
 /menu/
 /order/
-/branch_manager/
-/server/
-/clients/
-/entity/
-/utility/
-/hr/
